--- a/src/app/pages/about-component/about-component.component.html
+++ b/src/app/pages/about-component/about-component.component.html
@@ -11,15 +11,18 @@
                 <div class="about-content">
                     <div class="content">
                         <span class="sub-title"><img src="assets/img/star-icon.png" alt="image"> About Us</span>
-                        <h2>Drive Digital Revolution Through Data Science</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                        <h3>Unleash Potential Through Technology</h3>
+                        <p>
+                          By making an integrated set of tools available on a smartphone and browser alike we are putting
+                          reports and know-how into the hands of Integrations or Individual Farmers.
+                        </p>
                         <ul class="features-list">
                             <li><span>
                                 <div class="icon">
                                     <img src="assets/img/icon1.png" alt="image">
                                 </div>
-                                <h3>10 Years</h3>
-                                <p>On the market</p>
+                                <h3>10+ Years</h3>
+                                <p>In the market</p>
                             </span></li>
 
                             <li><span>
@@ -27,7 +30,7 @@
                                     <img src="assets/img/icon1.png" alt="image">
                                 </div>
                                 <h3>45+</h3>
-                                <p>Team members</p>
+                                <p>Customers</p>
                             </span></li>
 
                             <li><span>
@@ -42,11 +45,16 @@
                                 <div class="icon">
                                     <img src="assets/img/icon1.png" alt="image">
                                 </div>
-                                <h3>80%</h3>
-                                <p>Senior scientist</p>
+                                <h3>20+</h3>
+                                <p>Different Reports</p>
                             </span></li>
                         </ul>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                        <p>
+                          Analysis has shown that most farmers do not achieve the potential
+                          of the breed they are raising. The downside to this is that a lot of
+                          energy and money is wasted with little positive outcome. We believe
+                          that through better recordkeeping and data analysis results can be improved substantially.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -58,42 +66,44 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="about-text">
-                        <h3>Our History</h3>
-                        <p>Real innovations and a positive customer experience are the heart of successful communication.</p>
-                        
+                        <h3>Our Mission</h3>
+                        <p>To support all stakeholders in the poultry value chain, improve their operations by providing actionable data and insights.</p>
+
                         <ul class="features-list">
-                            <li><i class="flaticon-tick"></i> Activate Listening</li>
-                            <li><i class="flaticon-tick"></i> Brilliant minds</li>
-                            <li><i class="flaticon-tick"></i> Better. Best. Wow!</li>
-                            <li><i class="flaticon-tick"></i> Branding it better!</li>
+                            <li><i class="flaticon-tick"></i> By collecting and analyzing data</li>
+                            <li><i class="flaticon-tick"></i> By identifying areas for improvement</li>
+                            <li><i class="flaticon-tick"></i> Allowing you to make interventions </li>
+                            <li><i class="flaticon-tick"></i> Improve the technical and financial results.</li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="about-text">
-                        <h3>Our Mission</h3>
-                        <p>Real innovations and a positive customer experience are the heart of successful communication.</p>
-                        
+                        <h3>Our Vision</h3>
+                        <p> We envision a world where poultry value chain is streamlined, efficient, and accessible for all stakeholders.</p>
+
                         <ul class="features-list">
-                            <li><i class="flaticon-tick"></i> Creating. Results.</li>
-                            <li><i class="flaticon-tick"></i> Expect more</li>
-                            <li><i class="flaticon-tick"></i> Good thinking</li>
-                            <li><i class="flaticon-tick"></i> In real we trust</li>
+                            <li><i class="flaticon-tick"></i> Revolutionise poultry management through innovative technology</li>
+                            <li><i class="flaticon-tick"></i> Providing our users with intuitive tools to optimise productivity</li>
+                            <li><i class="flaticon-tick"></i>
+                              Fostering communities of thriving poultry stakeholders and
+                              contribute to a more sustainable and secure food supply.
+                            </li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-0 offset-md-3 offset-sm-3">
                     <div class="about-text">
-                        <h3>Who we are</h3>
-                        <p>Real innovations and a positive customer experience are the heart of successful communication.</p>
-                        
+                        <h3>Our Core Values</h3>
+                        <p>We are committed to continuously improving our software to provide cutting-edge solutions that enhance poultry farming and productivity.</p>
+
                         <ul class="features-list">
-                            <li><i class="flaticon-tick"></i> Stay real. Always.</li>
-                            <li><i class="flaticon-tick"></i> We have you covered</li>
-                            <li><i class="flaticon-tick"></i> We turn heads</li>
-                            <li><i class="flaticon-tick"></i> Your brand, promoted</li>
+                            <li><i class="flaticon-tick"></i> Innovation.</li>
+                            <li><i class="flaticon-tick"></i> Integrity</li>
+                            <li><i class="flaticon-tick"></i> User-Centricity</li>
+                            <li><i class="flaticon-tick"></i> Sustainability</li>
                         </ul>
                     </div>
                 </div>
@@ -103,3 +113,45 @@
 
     <div class="circle-shape1"><img src="assets/img/shape/circle-shape1.png" alt="image"></div>
 </section>
+
+<div class="partner-area ptb-70 bg-fafafb">
+  <div class="container">
+      <div class="row align-items-center">
+          <div class="col-lg-2 col-6 col-sm-4 col-md-4">
+              <div class="single-partner-item wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                  <img src="assets/img/partner/img1.png" alt="image">
+              </div>
+          </div>
+
+          <div class="col-lg-2 col-6 col-sm-4 col-md-4">
+              <div class="single-partner-item wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                  <img src="assets/img/partner/img2.png" alt="image">
+              </div>
+          </div>
+
+          <div class="col-lg-2 col-6 col-sm-4 col-md-4">
+              <div class="single-partner-item wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                  <img src="assets/img/partner/img3.png" alt="image">
+              </div>
+          </div>
+
+          <div class="col-lg-2 col-6 col-sm-4 col-md-4">
+              <div class="single-partner-item wow animate__animated animate__fadeInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
+                  <img src="assets/img/partner/img4.png" alt="image">
+              </div>
+          </div>
+
+          <div class="col-lg-2 col-6 col-sm-4 col-md-4">
+              <div class="single-partner-item wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                  <img src="assets/img/partner/img5.png" alt="image">
+              </div>
+          </div>
+
+          <div class="col-lg-2 col-6 col-sm-4 col-md-4">
+              <div class="single-partner-item wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                  <img src="assets/img/partner/img6.png" alt="image">
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
