--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -1,1 +1,31 @@
-<p>blog works!</p>
+
+
+<section class="page-title-area">
+  <div class="container">
+      <div class="page-title-content text-center">
+          <h2>Our Blogs</h2>
+          <ul>
+              <li><a routerLink="/">Home</a></li>
+              <li>Our Blogs</li>
+          </ul>
+      </div>
+  </div>
+
+  <div class="shape-img1"><img src="assets/img/shape/shape1.svg" alt="image"></div>
+  <div class="shape-img2"><img src="assets/img/shape/shape2.png" alt="image"></div>
+  <div class="shape-img3"><img src="assets/img/shape/shape3.png" alt="image"></div>
+</section>
+
+<section class="blog-area ptb-100">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-4 col-md-6">
+              <div class="single-blog-post bg-fffbf5">
+                  <div class="post-image">
+                    <img src="assets/img/No data.png" alt="no-data blog image">
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
