--- a/src/app/pages/home-component/home-component.component.html
+++ b/src/app/pages/home-component/home-component.component.html
@@ -29,11 +29,49 @@
     </div>
 </div>
 
+<section class="about-area pb-100">
+  <div class="container-fluid">
+      <div class="row align-items-center">
+          <div class="col-lg-6 col-md-12">
+              <div class="about-img">
+                  <img src="assets/img/about/img5.png" alt="image">
+                  <div class="shape"><img src="assets/img/about/shape1.png"></div>
+              </div>
+          </div>
+
+          <div class="col-lg-6 col-md-12">
+              <div class="about-content">
+                  <div class="content mt-5">
+                      <h3>What is I Grow Chicken?</h3>
+                      <p>
+                        I Grow Chicken develops solutions to support the profitable growing
+                        of poultry livestock by making an integrated set of tools available on a
+                        smartphone and browser alike we are putting reports and know-how into the hands
+                        of Integrations or Individual Farmers.
+                      </p>
+
+                      <p>
+                        The scalable nature of the solution allows for a wide range in size. All in all,
+                        we currently serve around 800 farmers. The I Grow Chicken Solution is a fully
+                        integrated solution covering the full value chain of the poultry industry. The design
+                        of the solution facilitates managing data for own operations as well as out growers.
+                      </p>
+                      <a routerLink="/modules" class="default-btn"><i class="flaticon-right"></i>Our Solutions<span></span></a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
 <section class="process-area ptb-100 bg-fafafb">
   <div class="container">
       <div class="section-title">
           <span class="sub-title"><img src="assets/img/star-icon.png" alt="image"> Our Working Process</span>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+          <p>
+            We employ a Plan-Do-Check-Act cycle.
+            I Grow Chicken is a powerful tool that helps poultry farmers optimize their operations and improve productivity.
+          </p>
       </div>
 
       <div class="row align-items-center m-0">
@@ -52,7 +90,7 @@
                                   <div class="image">
                                       <img src="assets/img/process/img-small1.png" alt="image">
                                   </div>
-                                  <h3>Frame the Problem</h3>
+                                  <h3>Plan & Place Flock</h3>
                                   <div class="number">1</div>
                               </div>
                           </div>
@@ -85,7 +123,7 @@
                                   <div class="image">
                                       <img src="assets/img/process/img-small4.png" alt="image">
                                   </div>
-                                  <h3>Explore the Data</h3>
+                                  <h3>Analyze the Reports</h3>
                                   <div class="number">4</div>
                               </div>
                           </div>
@@ -96,7 +134,7 @@
                                   <div class="image">
                                       <img src="assets/img/process/img-small5.png" alt="image">
                                   </div>
-                                  <h3>Perform Analysis</h3>
+                                  <h3>Communicate Results</h3>
                                   <div class="number">5</div>
                               </div>
                           </div>
@@ -107,12 +145,145 @@
                                   <div class="image">
                                       <img src="assets/img/process/img-small6.png" alt="image">
                                   </div>
-                                  <h3>Communicate Results</h3>
+                                  <h3>Take Corrective Action</h3>
                                   <div class="number">6</div>
                               </div>
                           </div>
                       </div>
                   </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<section class="services-area ptb-100 bg-e3fbff">
+  <div class="container">
+      <div class="section-title">
+          <span class="sub-title"><img src="assets/img/star-icon.png" alt="image"> Our Services</span>
+          <h3>Comprehensive poultry management software, all in one place.</h3>
+          <p>
+            I Grow Chicken simplifies every aspect of managing your poultry farm within a single, user-friendly platform.
+            From overseeing workers to monitoring your flock, it provides a comprehensive overview of your entire operations.
+            This streamlined approach helps you evaluate performance, identify areas for improvement, and ultimately enhance
+            your farm's efficiency and success.
+          </p>
+      </div>
+
+      <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-item wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon1.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/broiler-management">Broiler Management</a></h3>
+                    <p>
+                      Monitor your broiler birds' performance, enhance their health and body weight to achieve a superior Feed Conversion Ratio.
+                    </p>
+                    <a routerLink="/module/broiler-management" class="default-btn"><i class="flaticon-right"></i>Read More<span></span></a>
+                  <div class="shape1"><img src="assets/img/services/shape1.png" alt="image"></div>
+                  <div class="shape2"><img src="assets/img/services/shape2.png" alt="image"></div>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-item wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon2.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/breeder-management">Breeder Management</a></h3>
+                    <p>Track the performance of your parent and grandparent birds with precision to enhance their health and yield.</p>
+                  <a routerLink="/module/breeder-management" class="default-btn"><i class="flaticon-right"></i>Read More<span></span></a>
+                  <div class="shape1"><img src="assets/img/services/shape1.png" alt="image"></div>
+                  <div class="shape2"><img src="assets/img/services/shape2.png" alt="image"></div>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-item wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon3.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/layer-management">Layer Management</a></h3>
+                  <p>Oversee flock performance and plan egg production. Handle daily transactions and ensure the completion of the entire cycle.</p>
+                  <a routerLink="/module/layer-management" class="default-btn"><i class="flaticon-right"></i>Read More<span></span></a>
+                  <div class="shape1"><img src="assets/img/services/shape1.png" alt="image"></div>
+                  <div class="shape2"><img src="assets/img/services/shape2.png" alt="image"></div>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-item wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon4.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/hatchery-management">Hatchery Management</a></h3>
+                  <p>
+                    Manage the entire life cycle of hatchery operations from setting to hatching, eliminating the need for manual calculations and calendars.
+                  </p>
+                  <a routerLink="/module/hatchery-management" class="default-btn"><i class="flaticon-right"></i>Read More<span></span></a>
+                  <div class="shape1"><img src="assets/img/services/shape1.png" alt="image"></div>
+                  <div class="shape2"><img src="assets/img/services/shape2.png" alt="image"></div>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-item wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon5.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/veterinary-management">Veterinary Management</a></h3>
+                    <p>
+                      Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
+                      and productive birds.
+                    </p>
+                    <a routerLink="/module/veterinary-management" class="default-btn"><i class="flaticon-right"></i>Read More<span></span></a>
+                  <div class="shape1"><img src="assets/img/services/shape1.png" alt="image"></div>
+                  <div class="shape2"><img src="assets/img/services/shape2.png" alt="image"></div>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-item wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon6.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/feedmill-management">Feedmill Management</a></h3>
+                    <p>
+                      Manage and track feed inventory, create feed formulas and schedule feed production. Our software streamlines feedmill operations.
+                    </p>
+                    <a routerLink="/module/feedmill-management" class="default-btn"><i class="flaticon-right"></i>Read More<span></span></a>
+                  <div class="shape1"><img src="assets/img/services/shape1.png" alt="image"></div>
+                  <div class="shape2"><img src="assets/img/services/shape2.png" alt="image"></div>
+              </div>
+          </div>
+
+          <div class="col-lg-12 col-md-12">
+              <div class="load-more-btn text-center">
+                  <a routerLink="modules" class="default-btn">All Modules<span></span></a>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<section class="project-start-area ptb-100">
+  <div class="container">
+      <div class="row align-items-center">
+          <div class="col-lg-6 col-md-12">
+              <div class="project-start-image">
+                  <img src="assets/img/project-start1.png" data-speed="0.06" data-revert="true" alt="image">
+              </div>
+          </div>
+
+          <div class="col-lg-6 col-md-12">
+              <div class="project-start-content">
+                  <h2 class="wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">Like what you see?</h2>
+                  <p class="wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                    We are committed to ensuring your journey with I Grow Chicken is smooth and successful. From setup and discovering new features to resolving issues,
+                    we're here to support you every step of the way!
+                  </p>
+                  <a routerLink="/contact-us" class="default-btn wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms"><i class="flaticon-web"></i>Get Started<span></span></a>
               </div>
           </div>
       </div>
