--- a/src/app/partials/header-component/header-component.component.html
+++ b/src/app/partials/header-component/header-component.component.html
@@ -36,23 +36,23 @@
                         </li>
                         <li class="nav-item"><a href="#" class="nav-link">Modules <i class='bx bx-chevron-down'></i></a>
                             <ul class="dropdown-menu">
-                                <li class="nav-item"><a href="services-1.html" class="nav-link">Breeder Management</a></li>
+                                <li class="nav-item"><a routerLink="/module/breeder-management" class="nav-link">Breeder Management</a></li>
 
-                                <li class="nav-item"><a href="services-2.html" class="nav-link">Broiler Management</a></li>
+                                <li class="nav-item"><a routerLink="/module/broiler-management" class="nav-link">Broiler Management</a></li>
 
-                                <li class="nav-item"><a href="services-3.html" class="nav-link">Hatchery Management</a></li>
+                                <li class="nav-item"><a routerLink="/module/hatchery-management" class="nav-link">Hatchery Management</a></li>
 
-                                <li class="nav-item"><a href="services-4.html" class="nav-link">Layer Management</a></li>
+                                <li class="nav-item"><a routerLink="/module/layer-management" class="nav-link">Layer Management</a></li>
 
-                                <li class="nav-item"><a href="services-5.html" class="nav-link">Feed Mill Management</a></li>
+                                <li class="nav-item"><a routerLink="/module/feedmill-management" class="nav-link">Feed Mill Management</a></li>
 
-                                <li class="nav-item"><a href="services-6.html" class="nav-link">Veterinary Management</a></li>
+                                <li class="nav-item"><a routerLink="/module/veterinary-management" class="nav-link">Veterinary Management</a></li>
 
-                                <li class="nav-item"><a href="services-7.html" class="nav-link">Finance Module</a></li>
+                                <li class="nav-item"><a routerLink="/module/finance-module" class="nav-link">Finance Module</a></li>
 
-                                <li class="nav-item"><a href="services-8.html" class="nav-link">Egg Packing</a></li>
+                                <li class="nav-item"><a routerLink="/module/egg-packing" class="nav-link">Egg Packing</a></li>
 
-                                <li class="nav-item"><a href="services-8.html" class="nav-link">Processing Management</a></li>
+                                <li class="nav-item"><a routerLink="/module/processing-management" class="nav-link">Processing Management</a></li>
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link" routerLink="/blog" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">Blog</a></li>
