--- a/src/app/pages/contact-component/contact-component.component.html
+++ b/src/app/pages/contact-component/contact-component.component.html
@@ -4,7 +4,7 @@
         <div class="page-title-content">
             <h2>Contact Us</h2>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a routerLink="/">Home</a></li>
                 <li>Contact Us</li>
             </ul>
         </div>
@@ -24,7 +24,7 @@
                         <i class='bx bx-map'></i>
                     </div>
                     <h3>Our Address</h3>
-                    <p>175 5th Ave, New York, NY 10010, United States</p>
+                    <p>Wagenweg 222, 2012 NM Haarlem, Netherlands</p>
                 </div>
             </div>
 
@@ -37,8 +37,8 @@
                         <i class='bx bx-phone-call'></i>
                     </div>
                     <h3>Contact</h3>
-                    <p>Mobile: <a href="tel:+44457895789">(+44) - 45789 - 5789</a></p>
-                    <p>E-mail: <a href="/cdn-cgi/l/email-protection#234b464f4f4c635751424046510d404c4e"><span class="__cf_email__" data-cfemail="f199949d9d9eb1858390929483df929e9c">[email&#160;protected]</span></a></p>
+                    <p>Mobile: <a href="tel:+31 654 31 3771">+31 654 31 3771</a></p>
+                    <p>E-mail: <a href="mailto:info@igrowchicken.com">info&#64;igrowchicken.com</a></p>
                 </div>
             </div>
 
@@ -51,8 +51,8 @@
                         <i class='bx bx-time-five'></i>
                     </div>
                     <h3>Hours of Operation</h3>
-                    <p>Monday - Friday: 09:00 - 20:00</p>
-                    <p>Sunday & Saturday: 10:30 - 22:00</p>
+                    <p>Monday - Saturday: 09:00 - 17:00</p>
+                    <p>Sunday : Closed</p>
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
 <section class="contact-area pb-100">
     <div class="container">
         <div class="section-title">
-            <span class="sub-title"><img src="assets/img/star-icon.png" alt="image"> Get in Touch</span>           
+            <span class="sub-title"><img src="assets/img/star-icon.png" alt="image"> Get in Touch</span>
             <p>All fields are required.</p>
         </div>
 
@@ -122,5 +122,5 @@
 
 <!-- Map Area -->
 <div id="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.9476519598093!2d-73.99185268459418!3d40.74117737932881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a3f81d549f%3A0xb2a39bb5cacc7da0!2s175%205th%20Ave%2C%20New%20York%2C%20NY%2010010%2C%20USA!5e0!3m2!1sen!2sbd!4v1588746137032!5m2!1sen!2sbd"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d627.7647597520868!2d4.636598159965963!3d52.386908426347816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5ef6d917000a9%3A0xd2297270942db9ff!2si%20Grow%20Chicken!5e1!3m2!1sen!2ske!4v1741667460242!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
