--- a/src/app/pages/modules-component/modules-component.component.html
+++ b/src/app/pages/modules-component/modules-component.component.html
@@ -1,1 +1,158 @@
-<p>modules-component works!</p>
+
+<section class="page-title-area">
+  <div class="container">
+      <div class="page-title-content">
+          <h2>Our Modules</h2>
+          <ul>
+              <li><a routerLink="/">Home</a></li>
+              <li>Our Modules</li>
+          </ul>
+      </div>
+  </div>
+</section>
+
+
+  <section class="services-area pt-100 mt-30 pb-70 bg-f1f8fb">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-services-item-box wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                    <div class="icon">
+                        <img src="assets/img/services/icon1.png" alt="image">
+                    </div>
+                    <h3><a routerLink="/module/broiler-management">Broiler Management</a></h3>
+                    <p>
+                      Monitor your broiler birds' performance, enhance their health and body weight to achieve a superior Feed Conversion Ratio.
+                    </p>
+                    <a routerLink="/module/broiler-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-services-item-box wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                    <div class="icon">
+                        <img src="assets/img/services/icon2.png" alt="image">
+                    </div>
+                    <h3><a routerLink="/module/breeder-management">Breeder Management</a></h3>
+                    <p>Track the performance of your parent and grandparent birds with precision to enhance their health and yield.</p>
+                    <a routerLink="/module/breeder-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-services-item-box wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                    <div class="icon">
+                        <img src="assets/img/services/icon3.png" alt="image">
+                    </div>
+                    <h3><a routerLink="/module/layer-management">Layer Management</a></h3>
+                    <p>Oversee flock performance and plan egg production. Handle daily transactions and ensure the completion of the entire cycle.</p>
+                    <a routerLink="/module/layer-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-services-item-box wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                    <div class="icon">
+                        <img src="assets/img/services/icon4.png" alt="image">
+                    </div>
+                    <h3><a routerLink="/module/hatchery-management">Hatchery Management</a></h3>
+                    <p>
+                      Manage the entire life cycle of hatchery operations from setting to hatching, eliminating the need for manual calculations and calendars.
+                    </p>
+                    <a routerLink="/module/hatchery-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-services-item-box wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                    <div class="icon">
+                        <img src="assets/img/services/icon5.png" alt="image">
+                    </div>
+                    <h3><a routerLink="/module/veterinary-management">Veterinary Management</a></h3>
+                    <p>
+                      Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
+                      and productive birds.
+                    </p>
+                    <a routerLink="/module/veterinary-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="single-services-item-box wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                    <div class="icon">
+                        <img src="assets/img/services/icon6.png" alt="image">
+                    </div>
+                    <h3><a routerLink="/module/feedmill-management">Feedmill Management</a></h3>
+                    <p>
+                      Manage and track feed inventory, create feed formulas and schedule feed production. Our software streamlines feedmill operations.
+                    </p>
+                    <a routerLink="/module/feedmill-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-item-box wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon6.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/finance-module">Finance Module</a></h3>
+                  <p>
+                    With our software, you can easily manage and track feed inventory, create feed formulas, and schedule feed production.
+                  </p>
+                  <a routerLink="/module/finance-module" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+               </div>
+            </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="single-services-item-box wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                <div class="icon">
+                    <img src="assets/img/services/icon4.png" alt="image">
+                </div>
+                <h3><a routerLink="/module/hatchery-management">Egg Packing</a></h3>
+                <p>
+                  With our software, you can easily manage and track feed inventory, create feed formulas, and schedule feed production.
+                </p>
+                <a routerLink="/module/hatchery-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="single-services-item-box wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                <div class="icon">
+                    <img src="assets/img/services/icon5.png" alt="image">
+                </div>
+                <h3><a routerLink="/module/veterinary-management">Processing Management</a></h3>
+                <p>
+                  Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
+                  and productivity.
+                </p>
+                <a routerLink="/module/veterinary-management" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
+            </div>
+          </div>
+
+
+      </div>
+    </div>
+  </section>
+
+  <section class="project-start-area bg-color ptb-100">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-6 col-md-12">
+                <div class="project-start-image">
+                    <img src="assets/img/project-start1.png" data-speed="0.06" data-revert="true" alt="image">
+                </div>
+            </div>
+
+            <div class="col-lg-6 col-md-12">
+                <div class="project-start-content">
+                    <h2 class="wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">Like what you see? Get started now</h2>
+                    <a routerLink="/contact-us" class="default-btn wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms"><i class="flaticon-web"></i>Get Started<span></span></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="vector-shape9"><img src="assets/img/shape/vector-shape9.png" alt="image"></div>
+    <div class="vector-shape10"><img src="assets/img/shape/vector-shape10.png" alt="image"></div>
+  </section>
