--- a/src/app/partials/footer-component/footer-component.component.html
+++ b/src/app/partials/footer-component/footer-component.component.html
@@ -25,7 +25,7 @@
                         <li><a routerLink="/about-us" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">Company</a></li>
                         <li><a href="javascript:void(0);">Case Studies</a></li>
                         <li><a routerLink="/blog" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">Our Blog</a></li>
-                        <li><a routerLink="contact-us" routerLinkActive="router-link-active">Contact</a></li>
+                        <li><a routerLink="/contact-us" routerLinkActive="router-link-active">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -34,11 +34,11 @@
                 <div class="single-footer-widget">
                     <h3>Modules</h3>
                     <ul class="footer-links-list">
-                        <li><a href="team-1.html">Finance</a></li>
-                        <li><a href="services-1.html">Veterinary</a></li>
-                        <li><a href="testimonials.html">Layer Management</a></li>
-                        <li><a href="single-services-1.html">Broiler Management</a></li>
-                        <li><a href="single-services-2.html">More Modules</a></li>
+                        <li><a routerLink="/module/finance-module">Finance</a></li>
+                        <li><a routerLink="/module/veterinary-management">Veterinary</a></li>
+                        <li><a routerLink="module/layer-management">Layer Management</a></li>
+                        <li><a routerLink="module/broiler-management">Broiler Management</a></li>
+                        <li><a routerLink="/modules">All Modules</a></li>
                     </ul>
                 </div>
             </div>
@@ -47,10 +47,9 @@
                 <div class="single-footer-widget">
                     <h3>Address</h3>
                     <ul class="footer-contact-info">
-                        <li><i class='bx bx-map'></i>175 5th Ave, New York, NY 10010, United States</li>
-                        <li><i class='bx bx-phone-call'></i><a href="tel:+44587154756">+1 (123) 456 7890</a></li>
-                        <li><i class='bx bx-envelope'></i><a href="/cdn-cgi/l/email-protection#6008050c0c0f201412010305124e030f0d"><span class="__cf_email__" data-cfemail="58303d343437182c2a393b3d2a763b3735">[email&#160;protected]</span></a></li>
-                        <li><i class='bx bxs-inbox'></i><a href="tel:+557854578964">+55 785 4578964</a></li>
+                        <li><i class='bx bx-map'></i>Wagenweg 222,2012 NM Haarlem, Netherlands</li>
+                        <li><i class='bx bx-phone-call'></i><a href="tel:+31 654 31 3771">+31 654 31 3771</a></li>
+                        <li><i class='bx bx-envelope'></i><a href="mailto:info@igrowchicken">info&#64;igrowchicken.com</a></li>
                     </ul>
                 </div>
             </div>
@@ -59,13 +58,12 @@
         <div class="footer-bottom-area">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-6">
-                    <!-- <p><i class='bx bx-copyright'></i><script type="text/javascript">document.write(new Date().getFullYear());</script> <strong> I Grow Chicken</strong></p> -->
-                     <p>&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> <strong> I Grow Chicken</strong></p>
+                     <p>&copy; <strong>2025 I Grow Chicken</strong></p>
                 </div>
 
                 <div class="col-lg-6 col-md-6">
                     <ul>
-                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li><a routerLink="/privacy-policy">Privacy Policy</a></li>
                         <li><small><a target="_blank" href="https://envytheme.com/"> Theme by EnvyTheme</a></small></li>
                     </ul>
                 </div>
