--- a/src/app/modules/layer-management/layer-management.component.html
+++ b/src/app/modules/layer-management/layer-management.component.html
@@ -1,1 +1,189 @@
-<p>layer-management works!</p>
+
+
+<section class="page-title-area">
+  <div class="container">
+      <div class="page-title-content">
+          <h2>Layer Management</h2>
+          <ul>
+              <li><a routerLink="/">Home</a></li>
+              <li><a routerLink="/modules">Modules</a></li>
+              <li>Layer Management</li>
+          </ul>
+      </div>
+  </div>
+
+  <div class="shape-img1"><img src="assets/img/shape/shape1.svg" alt="image"></div>
+  <div class="shape-img2"><img src="assets/img/shape/shape2.png" alt="image"></div>
+  <div class="shape-img3"><img src="assets/img/shape/shape3.png" alt="image"></div>
+</section>
+
+
+<section class="services-details-area ptb-100">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-12 col-md-12">
+            <!-- <div class="services-details-image">
+                <img src="assets/img/layer-chicken.png" alt="layer-chicken" style="height: 600px; width: auto;">
+            </div> -->
+            <div class="services-details-desc">
+                <!-- <span class="sub-title">Layer Management</span> -->
+                <h3 class="sub-title" style="font-size: 2rem;">Layer Management</h3>
+                <p style="margin-top: 30px;">
+                  <span title="I Grow Chicken">IGC</span> empowers layer farms to make informed, data-driven decisions, boosting efficiency and
+                  ensuring a competitive edge in the market. By adopting <span title="I Grow Chicken">IGC</span>, farms can optimize flock management,
+                  enhance egg quality, and achieve greater success in their operations.
+                </p>
+            </div>
+
+            <section class="services-area pt-100 pb-70 bg-e3fbff">
+              <div class="container">
+                  <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                      <div class="single-solutions-box wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                          <div class="icon">
+                              <i class="flaticon-rocket"></i>
+                          </div>
+                          <h3>Streamlined planning and feeding schedules</h3>
+                          <p>
+                            I Grow Chicken helps layer farms to efficiently organize and undertake essential tasks like feeding, egg collection, and weight taking,
+                            ensuring seamless and effective operations.
+                            Tracks feed consumption on a daily & weekly basis for flocks, enabling adjustments to rations and ensuring optimal growth.
+                          </p>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                      <div class="single-solutions-box wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                          <div class="icon">
+                              <i class="flaticon-rocket"></i>
+                          </div>
+                          <h3>Achieve optimal egg quality</h3>
+                          <p>
+                            Logs the daily egg collection count, including quality evaluations and irregularities.
+                            Classifies eggs based on size and grade, offering valuable insights into quality and market potential.
+                            Monitors occurrences of broken or damaged eggs, highlighting possible concerns with handling or laying practices.
+                          </p>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                      <div class="single-solutions-box wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                          <div class="icon">
+                              <i class="flaticon-rocket"></i>
+                          </div>
+                          <h3>Accurate and Detailed Reports</h3>
+                          <p>
+                            Get comprehensive performance & Growth reports, empowering layer farms to analyze key metrics
+                            and make informed decisions whilst identifying areas for improvement.
+                            <span title="I Grow Chicken">IGC</span> will help determine feed efficiency by analyzing feed intake per unit of egg production, enabling
+                            better feed management, cost reduction and maximum yields.
+                          </p>
+                      </div>
+                    </div>
+
+                  </div>
+              </div>
+          </section>
+
+
+          </div>
+
+          <!-- <div class="col-lg-4 col-md-12">
+              <div class="services-details-info">
+                  <div class="download-file">
+                      <h3>Resources</h3>
+
+                      <ul>
+                          <li><a href="javascript:void(0);">PDF Download <i class='bx bxs-file-pdf'></i></a></li>
+                      </ul>
+                  </div>
+
+                  <div class="services-contact-info">
+                      <h3>Contact Info</h3>
+
+                      <ul>
+                          <li>
+                              <div class="icon">
+                                  <i class='bx bx-user-pin'></i>
+                              </div>
+                              <span>Phone:</span>
+                              <a href="tel:+31 654 31 3771">+31 654 31 3771</a>
+                          </li>
+                      </ul>
+                  </div>
+              </div>
+          </div> -->
+      </div>
+  </div>
+</section>
+
+<section class="project-start-area ptb-100">
+  <div class="container">
+      <div class="row align-items-center">
+          <div class="col-lg-6 col-md-12">
+              <div class="project-start-image">
+                  <img src="assets/img/project-start1.png" data-speed="0.06" data-revert="true" alt="image">
+              </div>
+          </div>
+
+          <div class="col-lg-6 col-md-12">
+              <div class="project-start-content">
+                  <h2 class="wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">Like what you see?</h2>
+                  <p class="wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                    We are committed to ensuring your journey with I Grow Chicken is smooth and successful. From setup and discovering new features to resolving issues,
+                    we're here to support you every step of the way!
+                  </p>
+                  <a routerLink="/contact-us" class="default-btn wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms"><i class="flaticon-web"></i>Get Started<span></span></a>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<section class="services-area pt-100 pb-70 bg-f1f8fb">
+  <div class="container">
+      <div class="section-title">
+          <h2>More Modules You Might Like</h2>
+      </div>
+
+      <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon1.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/feedmill-management">Feedmill Management</a></h3>
+                  <p>
+                    Manage and track feed inventory, create feed formulas and schedule feed production. Our software streamlines feedmill operations.
+                  </p>
+                  <a routerLink="/module/feedmill-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon1.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/veterinary-management">Veterinary Management</a></h3>
+                    <p>
+                      Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
+                      and productive birds.
+                    </p>
+                    <a routerLink="/module/veterinary-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon1.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/layer-management">Layer Management</a></h3>
+                  <p>Oversee flock performance and plan egg production. Handle daily transactions and ensure the completion of the entire cycle.</p>
+                  <a routerLink="/module/layer-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
