--- a/src/app/modules/hatchery-module/hatchery-module.component.html
+++ b/src/app/modules/hatchery-module/hatchery-module.component.html
@@ -1,1 +1,175 @@
-<p>hatchery-module works!</p>
+
+
+<section class="page-title-area">
+  <div class="container">
+      <div class="page-title-content">
+          <h2>Hatchery Management</h2>
+          <ul>
+              <li><a routerLink="/">Home</a></li>
+              <li><a routerLink="/modules">Modules</a></li>
+              <li>Hatchery Management</li>
+          </ul>
+      </div>
+  </div>
+
+  <div class="shape-img1"><img src="assets/img/shape/shape1.svg" alt="image"></div>
+  <div class="shape-img2"><img src="assets/img/shape/shape2.png" alt="image"></div>
+  <div class="shape-img3"><img src="assets/img/shape/shape3.png" alt="image"></div>
+</section>
+
+
+<section class="project-start-area ptb-100">
+  <div class="container">
+      <div class="row align-items-center">
+
+        <div class="col-lg-6 col-md-12">
+          <div class="project-start-content">
+              <h2 class="wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">The Hatchery</h2>
+              <p class="wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                Our software helps the hatchery manager manage the entire 21-day lifecycle of hatchery operations, from setting to hatching.
+                There's no need for calculations or calendars for your hatchery manager.
+              </p>
+              <p>
+                Our software provides a comprehensive egg placement planning report and monitors the flock from breeder to hatchery. <span title="I Grow Chicken">IGC's</span> hatchery module enhances your
+                production quality by offering features such as breakopen analysis, chick grading, and much more.
+              </p>
+              <a routerLink="/contact-us" class="default-btn wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">Contact Us</a>
+          </div>
+      </div>
+
+      <div class="col-lg-6 col-md-12">
+          <div class="project-start-image">
+              <img src="assets/img/Hatching results.png" data-speed="0.06" data-revert="true" alt="image">
+          </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="project-start-area">
+  <div class="container">
+    <h2>Features</h2>
+    <div class="row align-items-center">
+
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/img3.jpg" class="card-img-top" alt="chart-image" style="height:420px; width:auto;">
+            <div class="card-body">
+              <h5>Realtime Monitoring & Tracking</h5>
+              <p class="card-text">
+                Track and monitor your hatch plan, process data, dispatch and sales with an intuitive and simple to interprete dashboard.
+              </p>
+              <p>
+                Gain in-depth insights into hatchery performance with detailed summaries, productivity metrics and outcomes.
+                Get data on hatch & mortality rates, chick quality, production percentages, and other key performance indicators,
+                enabling informed decision-making and strategic planning.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/blob.jpg" class="card-img-top" alt="setting-controls">
+            <div class="card-body">
+              <h5>Customize Hatchery Controls</h5>
+              <p class="card-text">
+                I Grow Chicken's ERP allows hatchery managers to control the hatchery controls such as temperature, humidity, and turning cycles among many other features
+                thus allowing for effective egg incubation and hatching.
+              </p>
+              <p>With this advanced hatchery features, hatchery managers can easily manage the entire hatchery process from start to finish ensuring maximum hatch rates and
+                healthy production of chicks.
+                <br><br>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/chick.png" class="card-img-top" alt="chick-transfer-image" style="height:452px; width:auto;">
+            <div class="card-body">
+              <h5>Hatch Transfer</h5>
+              <p class="card-text">
+                I Grow Chicken facilitates seamless hatching process management by enabling users to monitor hatch rates and efficiently transfer newly hatched chicks to the appropriate facilities.
+                 This functionality optimizes post-incubation operations, boosts hatchery efficiency, and ensures the safe and proper care of chicks.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+     </div>
+  </div>
+</section>
+
+<section class="project-start-area ptb-100">
+  <div class="container">
+      <div class="row align-items-center">
+          <div class="col-lg-6 col-md-12">
+              <div class="project-start-image">
+                  <img src="assets/img/project-start1.png" data-speed="0.06" data-revert="true" alt="image">
+              </div>
+          </div>
+
+          <div class="col-lg-6 col-md-12">
+              <div class="project-start-content">
+                  <h2 class="wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">Like what you see?</h2>
+                  <p class="wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                    We are committed to ensuring your journey with I Grow Chicken is smooth and successful. From setup and discovering new features to resolving issues,
+                    we're here to support you every step of the way!
+                  </p>
+                  <a routerLink="/contact-us" class="default-btn wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms"><i class="flaticon-web"></i>Get Started<span></span></a>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<section class="services-area pt-100 pb-70 bg-f1f8fb">
+  <div class="container">
+      <div class="section-title">
+          <h2>More Modules You Might Like</h2>
+      </div>
+
+      <div class="row">
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon1.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/veterinary-management">Veterinary Management</a></h3>
+                    <p>
+                      Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
+                      and productive birds.
+                    </p>
+                    <a routerLink="/module/veterinary-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon1.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/layer-management">Finance Module</a></h3>
+                  <p>Oversee flock performance and plan egg production. Handle daily transactions and ensure the completion of the entire cycle.</p>
+                  <a routerLink="/module/layer-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                <div class="icon">
+                    <img src="assets/img/services/icon1.png" alt="image">
+                </div>
+                <h3><a routerLink="/module/feedmill-management">Feedmill Management</a></h3>
+                <p>
+                  Manage and track feed inventory, create feed formulas and schedule feed production. Our software streamlines feedmill operations.
+                </p>
+                <a routerLink="/module/feedmill-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+            </div>
+        </div>
+      </div>
+  </div>
+</section>
