--- a/src/app/partials/header-component/header-component.component.html
+++ b/src/app/partials/header-component/header-component.component.html
@@ -34,7 +34,7 @@
                         <li class="nav-item">
                             <a class="nav-link" routerLink="about-us" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">About Us</a>
                         </li>
-                        <li class="nav-item"><a href="#" class="nav-link">Modules <i class='bx bx-chevron-down'></i></a>
+                        <li class="nav-item"><a href="javascript:void(0);" class="nav-link">Modules <i class='bx bx-chevron-down'></i></a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item"><a routerLink="/module/breeder-management" class="nav-link">Breeder Management</a></li>
 
