--- a/src/app/modules/hatchery-module/hatchery-module.component.html
+++ b/src/app/modules/hatchery-module/hatchery-module.component.html
@@ -30,7 +30,7 @@
                 There's no need for calculations or calendars for your hatchery manager.
               </p>
               <p>
-                Our software provides a comprehensive egg placement planning report and monitors the flock from breeder to hatchery. <span title="I Grow Chicken">IGC's</span> hatchery module enhances your
+                I Grow Chicken provides a comprehensive egg placement planning report and monitors the flock from breeder to hatchery. <span title="I Grow Chicken">IGC's</span> hatchery module enhances your
                 production quality by offering features such as breakopen analysis, chick grading, and much more.
               </p>
               <a routerLink="/contact-us" class="default-btn wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">Contact Us</a>
@@ -86,7 +86,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="assets/img/chick.png" class="card-img-top" alt="chick-transfer-image" style="height:452px; width:auto;">
+            <img src="assets/img/chick.png" class="card-img-top" alt="chick-transfer-image">
             <div class="card-body">
               <h5>Hatch Transfer</h5>
               <p class="card-text">
@@ -113,10 +113,9 @@
 
           <div class="col-lg-6 col-md-12">
               <div class="project-start-content">
-                  <h2 class="wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">Like what you see?</h2>
+                  <h2 class="wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">Want to know more on the Hatchery?</h2>
                   <p class="wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
-                    We are committed to ensuring your journey with I Grow Chicken is smooth and successful. From setup and discovering new features to resolving issues,
-                    we're here to support you every step of the way!
+                   Get in touch with us today or schedule a demo with one of our experts.
                   </p>
                   <a routerLink="/contact-us" class="default-btn wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms"><i class="flaticon-web"></i>Get Started<span></span></a>
               </div>
@@ -128,7 +127,7 @@
 <section class="services-area pt-100 pb-70 bg-f1f8fb">
   <div class="container">
       <div class="section-title">
-          <h2>More Modules You Might Like</h2>
+          <h2>Explore other modules</h2>
       </div>
 
       <div class="row">
@@ -152,9 +151,9 @@
                   <div class="icon">
                       <img src="assets/img/services/icon1.png" alt="image">
                   </div>
-                  <h3><a routerLink="/module/layer-management">Finance Module</a></h3>
+                  <h3><a routerLink="/module/finance-module">Finance Module</a></h3>
                   <p>Oversee flock performance and plan egg production. Handle daily transactions and ensure the completion of the entire cycle.</p>
-                  <a routerLink="/module/layer-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+                  <a routerLink="/module/finance-module" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
               </div>
           </div>
 
