--- a/src/app/pages/about-component/about-component.component.html
+++ b/src/app/pages/about-component/about-component.component.html
@@ -73,7 +73,7 @@
                             <li><i class="flaticon-tick"></i> By collecting and analyzing data</li>
                             <li><i class="flaticon-tick"></i> By identifying areas for improvement</li>
                             <li><i class="flaticon-tick"></i> Allowing you to make interventions </li>
-                            <li><i class="flaticon-tick"></i> Improve the technical and financial results.</li>
+                            <li><i class="flaticon-tick"></i> Improve the technical and financial results</li>
                         </ul>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                             <li><i class="flaticon-tick"></i> Providing our users with intuitive tools to optimise productivity</li>
                             <li><i class="flaticon-tick"></i>
                               Fostering communities of thriving poultry stakeholders and
-                              contribute to a more sustainable and secure food supply.
+                              contribute to a more sustainable and secure food supply
                             </li>
                         </ul>
                     </div>
@@ -100,7 +100,7 @@
                         <p>We are committed to continuously improving our software to provide cutting-edge solutions that enhance poultry farming and productivity.</p>
 
                         <ul class="features-list">
-                            <li><i class="flaticon-tick"></i> Innovation.</li>
+                            <li><i class="flaticon-tick"></i> Innovation</li>
                             <li><i class="flaticon-tick"></i> Integrity</li>
                             <li><i class="flaticon-tick"></i> User-Centricity</li>
                             <li><i class="flaticon-tick"></i> Sustainability</li>
