--- a/src/app/pages/home-component/home-component.component.html
+++ b/src/app/pages/home-component/home-component.component.html
@@ -9,7 +9,7 @@
                     <h1 class="wow animate__animated animate__fadeInLeft" data-wow-delay="00ms" data-wow-duration="1000ms">Digitize.Track.Manage</h1>
                     <p class="wow animate__animated animate__fadeInLeft" data-wow-delay="100ms" data-wow-duration="1000ms">
                         Embrace mobile-based solutions, transforming your smartphone into a digital farm book. We employ a Plan-Do-Check-Act cycle,
-                        where it helps identify what you intended to do, what you have done, and where you need to make changes to
+                        where you identify what you intended to do, what you have done, and where you need to make changes to
                         perform better in the future.
                     </p>
                     <div class="btn-box">
