--- a/src/app/modules/breeder-management/breeder-management.component.html
+++ b/src/app/modules/breeder-management/breeder-management.component.html
@@ -155,8 +155,7 @@
                   </div>
                   <h3><a routerLink="/module/veterinary-management">Veterinary Management</a></h3>
                     <p>
-                      Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
-                      and productive birds.
+                      Track and manage health records of your flock, schedule vaccinations and treatments for healthy,                       productive birds.
                     </p>
                     <a routerLink="/module/veterinary-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
               </div>
