--- a/src/app/modules/hatchery-module/hatchery-module.component.html
+++ b/src/app/modules/hatchery-module/hatchery-module.component.html
@@ -117,7 +117,9 @@
                   <p class="wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
                    Get in touch with us today or schedule a demo with one of our experts.
                   </p>
-                  <a routerLink="/contact-us" class="default-btn wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms"><i class="flaticon-web"></i>Get Started<span></span></a>
+                  <a class="default-btn wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms" href=""
+                   onclick="Calendly.initPopupWidget({url: 'https://calendly.com/mike-waweru-ebit-plus/igc-demo-request'});return false;"><i class="flaticon-web"></i>Book a Demo
+                  </a>
               </div>
           </div>
       </div>
