--- a/src/app/partials/header-component/header-component.component.html
+++ b/src/app/partials/header-component/header-component.component.html
@@ -58,6 +58,9 @@
                         <li class="nav-item"><a class="nav-link" routerLink="/blog" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">Blog</a></li>
 
                         <li class="nav-item"><a class="nav-link" routerLink="/contact-us" routerLinkActive="router-link-active" ariaCurrentWhenActive="page">Contact Us</a></li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="https://igrowchicken.azurewebsites.net/Account/Login" target="_blank">Login</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
