--- a/src/app/modules/feedmill-management/feedmill-management.component.html
+++ b/src/app/modules/feedmill-management/feedmill-management.component.html
@@ -1,1 +1,197 @@
-<p>feedmill-management works!</p>
+
+
+<section class="page-title-area">
+  <div class="container">
+      <div class="page-title-content">
+          <h2>Feed Mill Management</h2>
+          <ul>
+              <li><a routerLink="/">Home</a></li>
+              <li><a routerLink="/modules">Modules</a></li>
+              <li>Feed Mill Management</li>
+          </ul>
+      </div>
+  </div>
+
+  <div class="shape-img1"><img src="assets/img/shape/shape1.svg" alt="image"></div>
+  <div class="shape-img2"><img src="assets/img/shape/shape2.png" alt="image"></div>
+  <div class="shape-img3"><img src="assets/img/shape/shape3.png" alt="image"></div>
+</section>
+
+
+<section class="services-details-area ptb-100">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-8 col-md-12">
+              <div class="services-details-image">
+                  <img src="assets/img/feedmill.png" alt="feedmill" style="height: 600px; width: auto;">
+              </div>
+              <div class="services-details-desc">
+                  <span class="sub-title">Feed Mill Management</span>
+                  <p style="margin-top: 30px;">
+                    Oversee your raw materials and ensure the quality of both raw materials and finished products.
+                    Our feed mill module allows you to optimize feed and pre-mix production by precise tracking from raw material sourcing to packaging.
+                  </p>
+
+                  <h3>Features</h3>
+
+                  <div class="row align-items-center">
+                    <div class="col-lg-6 col-md-6">
+                        <div class="image">
+                            <img src="assets/img/projects/img2.jpg" alt="image">
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                        <div class="content">
+                            <h3>Smart Reporting</h3>
+                            <p>
+                              Stay ahead of the game by tracking feed production, consumption, and sales through a real-time dashboard that's
+                              accessible anytime, anywhere. The intelligent reporting and historical comparisons within the feed mill management
+                              software empower you to make informed decisions.
+                            </p>
+                        </div>
+                    </div>
+                  </div>
+
+                  <div class="row align-items-center">
+                    <div class="col-lg-6 col-md-6">
+                        <div class="content">
+                            <h3>Adaptable Poultry Operations</h3>
+                            <p>
+                              By managing premix formulation, you can adjust feed formulas to cater to your flock's unique requirements, enhancing their health and productivity.
+                              Overseeing & Premix Production guarantees that your birds receive optimal nutrition, resulting in steady growth and improved performance.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                      <div class="image">
+                          <img src="assets/img/premix optimization.jpg" alt="premix-optimization">
+                      </div>
+                    </div>
+                </div>
+
+                <div class="row align-items-center">
+                  <div class="col-lg-6 col-md-6">
+                      <div class="image">
+                          <img src="assets/img/waste reduction.jpg" alt="waste-reduction">
+                      </div>
+                  </div>
+
+                  <div class="col-lg-6 col-md-6">
+                      <div class="content">
+                          <h3>Minimize Waste</h3>
+                          <p>
+                            Monitoring Indent Order-Based Production allows you to create the precise quantity of needed, minimizing waste and saving costs.
+                            This-encompassing strategy boosts overall efficiency and profitability on your farm. Our feed mill management module allows you to minimize waste by
+                            monitoring essential parameters throughout the production process.
+                          </p>
+                      </div>
+                  </div>
+                </div>
+
+
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-12">
+              <div class="services-details-info">
+                  <div class="download-file">
+                      <h3>Resources</h3>
+
+                      <ul>
+                          <li><a href="javascript:void(0);">PDF Download <i class='bx bxs-file-pdf'></i></a></li>
+                      </ul>
+                  </div>
+
+                  <div class="services-contact-info">
+                      <h3>Contact Info</h3>
+
+                      <ul>
+                          <li>
+                              <div class="icon">
+                                  <i class='bx bx-user-pin'></i>
+                              </div>
+                              <span>Phone:</span>
+                              <a href="tel:+31 654 31 3771">+31 654 31 3771</a>
+                          </li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<section class="project-start-area ptb-100">
+  <div class="container">
+      <div class="row align-items-center">
+          <div class="col-lg-6 col-md-12">
+              <div class="project-start-image">
+                  <img src="assets/img/project-start1.png" data-speed="0.06" data-revert="true" alt="image">
+              </div>
+          </div>
+
+          <div class="col-lg-6 col-md-12">
+              <div class="project-start-content">
+                  <h2 class="wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">Want to know more on the Feed Mill?</h2>
+                  <p class="wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                   Get in touch with us today or schedule a demo with one of our experts.
+                  </p>
+
+                  <a class="default-btn wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms" href=""
+                   onclick="Calendly.initPopupWidget({url: 'https://calendly.com/mike-waweru-ebit-plus/igc-demo-request'});return false;"><i class="flaticon-web"></i>Book a Demo
+                  </a>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<section class="services-area pt-100 pb-70 bg-f1f8fb">
+  <div class="container">
+      <div class="section-title">
+          <h2>More Modules You Might Like</h2>
+      </div>
+
+      <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon1.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/broiler-management">Broiler Management</a></h3>
+                  <p>
+                    Monitor your broiler birds' performance, enhance their health and body weight to achieve a superior Feed Conversion Ratio.
+                  </p>
+                  <a routerLink="/module/broiler-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon1.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/veterinary-management">Egg Packing</a></h3>
+                    <p>
+                      Easily track and manage the health records of your flock, schedule vaccinations and treatments for healthy
+                      and productive birds.
+                    </p>
+                    <a routerLink="/module/veterinary-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="single-services-box wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                  <div class="icon">
+                      <img src="assets/img/services/icon1.png" alt="image">
+                  </div>
+                  <h3><a routerLink="/module/layer-management">Layer Management</a></h3>
+                  <p>Oversee flock performance and plan egg production. Handle daily transactions and ensure the completion of the entire cycle.</p>
+                  <a routerLink="/module/layer-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
