vet + egg modules

--- a/src/app/modules/veterinary-module/veterinary-module.component.html
+++ b/src/app/modules/veterinary-module/veterinary-module.component.html
@@ -32,7 +32,7 @@
                     keep track of medication, reduce the risk of disease outbreak and improve the bird's health.
                   </p>
 
-                  <h3>Features</h3>
+                  <h2>Core Features</h2>
 
                   <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6">
@@ -43,7 +43,7 @@
 
                     <div class="col-lg-6 col-md-6">
                         <div class="content">
-                            <h3>Medication Scheduling</h3>
+                            <h3>Schedule Medication Easily</h3>
                             <p>
                               Maintain your birds' health effortlessly by utilizing the medication scheduling feature in I Grow Chicken Software. This tool ensures timely and consistent administration of medications,
                               which is vital for disease prevention and overall well-being. With a proper schedule in place, your birds will receive the treatments they need to thrive.
@@ -55,7 +55,7 @@
                   <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6">
                         <div class="content">
-                            <h3>Detailed Health Reports</h3>
+                            <h3>Get detailed Health Reports</h3>
                             <p>
                               Get informed and detailed flock health from the I Grow Chicken Software. Gain valuable insights on how vaccination is administered, who administered the medication, whether the proper medication
                               schedules are being adhered to and much more. This information will help you make informed decisions and improve your bird's health, identify potential issues and take necessary actions.
@@ -73,17 +73,16 @@
                 <div class="row align-items-center">
                   <div class="col-lg-6 col-md-6">
                       <div class="image">
-                          <img src="assets/img/waste reduction.jpg" alt="waste-reduction">
+                          <img src="assets/img/doc-with-hen.jpg" alt="doctor-with-hen-image" title="Image from https://images.bloombergtechnoz.com/data/2024/06/image-20240613103743.jpg">
                       </div>
                   </div>
 
                   <div class="col-lg-6 col-md-6">
                       <div class="content">
-                          <h3>Minimize Waste</h3>
+                          <h3>Flexibility & Customization</h3>
                           <p>
-                            Monitoring Indent Order-Based Production allows you to create the precise quantity of needed, minimizing waste and saving costs.
-                            This-encompassing strategy boosts overall efficiency and profitability on your farm. Our feed mill management module allows you to minimize waste by
-                            monitoring essential parameters throughout the production process.
+                            With our software, we allow you to customize your medication schedule to fit your specific needs. You can add or remove disease types and adjust mortality reasons, 
+                            to appear visible in your postmoterm resports to give you custom tailored experience and avoid cluttered and unrealistic data for your farm and flock.
                           </p>
                       </div>
                   </div>
